@@ -1,4 +1,5 @@
 <?php
 	define("SERVICE_ALGORITHM_NONE",0);
 	define("SERVICE_ALGORITHM_MAX",1);
+	define("SERVICE_ALGORITHM_MIN",2);
 ?>
